# mlWizzard

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: sample_fundamentals.csv  sample_prices.csv  universe.csv
data/reports/: AIR_2025.txt  ASML_2025.txt  CAP_2025.txt  MC_2025.txt  NESN_2025.txt  NOVO_2025.txt  SAP_2025.txt  SIE_2025.txt  SU_2025.txt  TTE_2025.txt
models/: lightgbm_ranker.pkl
src/: cli.py  config.py
src/agent/: orchestrator.py  prompts.py  tool_schema.py
src/mcp/: server.py
src/ml/: evaluate.py  features.py  generate_sample_data.py  train.py
src/rag/: chunking.py  embeddings.py  ingestion.py  retrieval.py
src/tools/: analyzer.py  backtest.py  comparator.py  market_data.py  scorer.py  screener.py
